--- a/Views/Pdf/HRVIndicatorsResults.cshtml
+++ b/Views/Pdf/HRVIndicatorsResults.cshtml
@@ -4,7 +4,7 @@
     <div class="card">
         <h3>HRV-показатели: </h3>
     </div>
-    <table border="1">
+    <table>
    <caption>HRV-показатели спортсмена </caption>
 
    <tr>
