--- a/Views/Pdf/TrainingsList.cshtml
+++ b/Views/Pdf/TrainingsList.cshtml
@@ -15,7 +15,7 @@
         </div>
     }
 
-    <table border="1">
+    <table>
         <caption>Список тренировок </caption>
         <tr>
             <th>№</th>
