--- a/Views/Pdf/HRVIndicatorsResults.cshtml
+++ b/Views/Pdf/HRVIndicatorsResults.cshtml
@@ -73,7 +73,7 @@
 
     <form method="post" asp-controller="Pdf" asp-action="ExportHrvIndicatorsPdf">
         <input type="hidden" name="ExportData" id="ExportData" />
-        <input type="submit" id="btnSubmit" value="Export" class="btn btn-primary" />
+        <input type="submit" id="btnSubmit" value="Скачать pdf-файл" class="btn btn-primary" />
     </form>
 
  </body>
