--- a/Views/Pdf/TrainingsList.cshtml
+++ b/Views/Pdf/TrainingsList.cshtml
@@ -35,18 +35,6 @@
 
     <form method="post" asp-controller="Pdf" asp-action="ExportTrainingListPdf">
         <input type="hidden" name="ExportData" id="ExportData" />
-        <input type="submit" id="btnSubmit" value="Export" class="btn btn-primary" />
+        <input type="submit" id="btnSubmit" value="Скачать pdf-файл" class="btn btn-primary" />
     </form>
 </body>
-
-
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript">
-    $(function () {
-        $("#btnSubmit").click(function () {
-            $("input[name='ExportData']").val($("#PrintPDF").html());
-        });
-    });
-</script>
-     </div>
-   </div> *@
