--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
                             </li>
                              <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Pdf" asp-action="HRVIndicatorsResults">PDF1</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Pdf" asp-action="HrvIndicatorsResults">PDF1</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Pdf" asp-action="TrainingsList">PDF2</a>
