--- a/Views/Forum/Index.cshtml
+++ b/Views/Forum/Index.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <div class="card">
-    Форум
+    <h5>Форум</h5>
 </div>
 
 @if (User.Identity.IsAuthenticated)
