--- a/Views/Pdf/TotalTrainingTypesTime.cshtml
+++ b/Views/Pdf/TotalTrainingTypesTime.cshtml
@@ -61,7 +61,7 @@
 
     <form method="post" asp-controller="Pdf" asp-action="ExportTotalTrainingTypesTimePdf">
         <input type="hidden" name="ExportData" id="ExportData" />
-        <input type="submit" id="btnSubmit" value="Export" class="btn btn-primary" />
+        <input type="submit" id="btnSubmit" value="Скачать pdf-файл" class="btn btn-primary" />
     </form>
 
 </body>
