Statistical indicators of dynamics
A controller has been added to analyze the statistical dynamics of changes in the indicators of the total training time, the number of trainings and mailings by day during training camps, dependencies have been identified.

--- a/Views/Chart/TrainingPie.cshtml
+++ b/Views/Chart/TrainingPie.cshtml
@@ -62,7 +62,8 @@
                     hAxis: {title: 'Тип тренировки'},
                     seriesType: 'bars',
                     series: {5: {type: 'line'}},
-                    height: 500
+                    height: 500,
+                    is3D: true 
                   };
 
             // Instantiate and draw our chart, passing in some options.
