--- a/Views/Pdf/TotalTrainingTypesTime.cshtml
+++ b/Views/Pdf/TotalTrainingTypesTime.cshtml
@@ -16,7 +16,7 @@
          <input asp-controller="Pdf" asp-action="TotalTrainingTypesTime" class="custom_button" type="submit" value="Выбрать" />
      </form>
 
-    <table border="1">
+    <table >
         <caption>Общее время по разделам </caption>
         <tr>
             <th>Вид Тренировки</th>
