--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,6 +69,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="ScheduleOfTotalTrainingTimeForTrainingCamps">Line</a>
                             </li>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="StatisticalForecasting" asp-action="StatisticalTotalTrainingTimeByCampsDynamicsIndicators">Statistica</a>
+                            </li>
                         }
 
                     </ul>
