Smoothing Time Series Using Moving Averages
Added methods and output to the statistical forecastin controller and corresponding view for plotting moving average graphs for total training time, number of training sessions, and number of training camp mailings

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,10 +39,10 @@
                             @if (User.IsInRole("Trainer"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Topic">Рассылка</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Mailing" asp-action="Topic">Рассылка</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Question">Вопросы</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Support" asp-action="Question">Вопросы</a>
                                 </li>
                             }
                             <li class="nav-item">
