--- a/Views/StatisticalForecasting/StatisticalTotalTrainingTimeByCampsDynamicsIndicators.cshtml
+++ b/Views/StatisticalForecasting/StatisticalTotalTrainingTimeByCampsDynamicsIndicators.cshtml
@@ -31,7 +31,7 @@
     {
         TotalTrainingCampsDurationView previousTotalTrainingCampsDuration;
         
-        @for (int i = 0; i < (ViewBag.TotalTrainingTimeForTrainingCamps as IEnumerable<TotalTrainingCampsDurationView>).Count(); i++)
+        @for (int i = 0; i < ((ViewBag.TotalTrainingTimeForTrainingCamps as IEnumerable<TotalTrainingCampsDurationView>)!).Count(); i++)
         {
             TotalTrainingCampsDurationView firstTotalTrainingCampsDuration = ViewBag.TotalTrainingTimeForTrainingCamps[0];
             TotalTrainingCampsDurationView currentTotalTrainingCampsDuration = ViewBag.TotalTrainingTimeForTrainingCamps[i];
@@ -80,7 +80,7 @@
           <h5 style="width: 1200px;">На графике отчётливо прослеживаются периодические сезонные колебания. Ежемесячные периодические снижения тренировочного времени свиедетельствуют о прерывании тренировочных сборов на период соревнований, праздничных дней или летних каникул, когда не проводятся тренировочные сборы у спортсменов при неизменном тренде.</h5>
 <br>
 
-<table id = 1>
+<table>
     <tr>
         <th rowspan = 2 style="text-align: center;">Период</th>
         <th rowspan = 2 style="text-align: center;">Фактическое значение</th>
@@ -95,16 +95,24 @@
     
     @if (ViewBag.MovingAveragesForTotalTrainingCampsDuration is not null)
     {
-        @foreach(var element in ViewBag.MovingAveragesForTotalTrainingCampsDuration as IEnumerable<MovingAveragesViewModel>)
+        @foreach(var element in (ViewBag.MovingAveragesForTotalTrainingCampsDuration as IEnumerable<MovingAveragesViewModel>)!)
         {
             <tr>
                 <td style="text-align: center;">@element.Id</td>
                 <td style="text-align: center;">@element.Value</td>
-                <td style="text-align: center;">@((element.IntervalLengthThree == null) ? "–" : element.IntervalLengthThree?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthSeven == null) ? "–" : element.IntervalLengthSeven?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthFive == null) ? "–" : element.IntervalLengthFive?.ToString("0.00"))</td>
+                <td style="text-align: center;">@element.IntervalLengthThree?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthSeven?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthFive?.ToString("0.00")</td>
             </tr>
         }
+        
+        <tr>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingDuration.Id</td>
+            <td style="text-align: center;">Прогноз</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingDuration.IntervalLengthThree.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingDuration.IntervalLengthSeven.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingDuration.IntervalLengthFive.ToString("0.00")</td>
+        </tr>
     }
 </table>
 
@@ -130,16 +138,24 @@
     
     @if (ViewBag.MovingAveragesForTotalTrainingCampsCount is not null)
     {
-        @foreach(var element in ViewBag.MovingAveragesForTotalTrainingCampsCount as IEnumerable<MovingAveragesViewModel>)
+        @foreach(var element in (ViewBag.MovingAveragesForTotalTrainingCampsCount as IEnumerable<MovingAveragesViewModel>)!)
         {
             <tr>
                 <td style="text-align: center;">@element.Id</td>
                 <td style="text-align: center;">@element.Value</td>
-                <td style="text-align: center;">@((element.IntervalLengthThree == null) ? "–" : element.IntervalLengthThree?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthSeven == null) ? "–" : element.IntervalLengthSeven?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthFive == null) ? "–" : element.IntervalLengthFive?.ToString("0.00"))</td>
+                <td style="text-align: center;">@element.IntervalLengthThree?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthSeven?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthFive?.ToString("0.00")</td>
             </tr>
         }
+        
+        <tr>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingCount.Id</td>
+            <td style="text-align: center;">Прогноз</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingCount.IntervalLengthThree.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingCount.IntervalLengthSeven.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalTrainingCount.IntervalLengthFive.ToString("0.00")</td>
+        </tr>
     }
 </table>
 
@@ -165,16 +181,24 @@
     
     @if (ViewBag.MovingAveragesForTotalDayMailingCount is not null)
     {
-        @foreach(var element in ViewBag.MovingAveragesForTotalDayMailingCount as IEnumerable<MovingAveragesViewModel>)
+        @foreach(var element in (ViewBag.MovingAveragesForTotalDayMailingCount as IEnumerable<MovingAveragesViewModel>)!)
         {
             <tr>
                 <td style="text-align: center;">@element.Id</td>
                 <td style="text-align: center;">@element.Value</td>
-                <td style="text-align: center;">@((element.IntervalLengthThree == null) ? "–" : element.IntervalLengthThree?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthSeven == null) ? "–" : element.IntervalLengthSeven?.ToString("0.00"))</td>
-                <td style="text-align: center;">@((element.IntervalLengthFive == null) ? "–" : element.IntervalLengthFive?.ToString("0.00"))</td>
+                <td style="text-align: center;">@element.IntervalLengthThree?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthSeven?.ToString("0.00")</td>
+                <td style="text-align: center;">@element.IntervalLengthFive?.ToString("0.00")</td>
             </tr>
         }
+        
+        <tr>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalMailingCount.Id</td>
+            <td style="text-align: center;">Прогноз</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalMailingCount.IntervalLengthThree.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalMailingCount.IntervalLengthSeven.ToString("0.00")</td>
+            <td style="text-align: center;">@ViewBag.PredictiveValueForTotalMailingCount.IntervalLengthFive.ToString("0.00")</td>
+        </tr>
     }
 </table>
 
@@ -201,7 +225,7 @@
               var data = google.visualization.arrayToDataTable([
               ['Дата', 'Общее тренировочное время за день, мин'],
               
-              @foreach (var d in ViewBag.TotalDayTrainingDuration as IEnumerable<TotalDayTrainingDurationView>) {
+              @foreach (var d in (ViewBag.TotalDayTrainingDuration as IEnumerable<TotalDayTrainingDurationView>)!) {
                   <text>[new Date(@d.Date.Year, @d.Date.Month, @d.Date.Day), @d.TotalDuration.TotalMinutes],</text>
               }
               ]);
@@ -229,7 +253,7 @@
                 var data = google.visualization.arrayToDataTable([
                 ['Дата', 'Количество тренировок за день'],
               
-                @foreach (var d in ViewBag.TotalDayTrainingCount as IEnumerable<TotalDayTrainingCountView>) {
+                @foreach (var d in (ViewBag.TotalDayTrainingCount as IEnumerable<TotalDayTrainingCountView>)!) {
                     <text>[new Date(@d.Date.Year, @d.Date.Month, @d.Date.Day), @((d.TrainingCount == 2) ? 0 : d.TrainingCount)],</text>
                 }
                 ]);
@@ -257,7 +281,7 @@
                     var data = google.visualization.arrayToDataTable([
                     ['Дата', 'Количество рассылок за день'],
                   
-                    @foreach (var d in ViewBag.TotalDayMailingCount as IEnumerable<TotalDayMailingCountView>) {
+                    @foreach (var d in (ViewBag.TotalDayMailingCount as IEnumerable<TotalDayMailingCountView>)!) {
                         <text>[new Date(@d.Date.Year, @d.Date.Month, @d.Date.Day), @d.MailingCount],</text>
                     }
                     ]);
@@ -285,13 +309,13 @@
                         var data = google.visualization.arrayToDataTable([
                             ['Период', 'Фактические значения', 'l3', 'l7', 'l5'],
                             
-                            @foreach (var d in ViewBag.MovingAveragesForTotalTrainingCampsDuration as IEnumerable<MovingAveragesViewModel>)
+                            @foreach (var d in (ViewBag.MovingAveragesForTotalTrainingCampsDuration as IEnumerable<MovingAveragesViewModel>)!)
                             {
                                 <text>[@(d.Id.ToString("0.00", CultureInfo.InvariantCulture)),
-                                 @(d.Value.ToString("0.00", CultureInfo.InvariantCulture)),
-                                  @((d.IntervalLengthThree is null) ? "undefined" : (d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                                  @((d.IntervalLengthSeven is null) ? "undefined" : (d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                                  @((d.IntervalLengthFive is null) ? "undefined" : (d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
+                                 @(d.Value?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
                             }                     
                         ]);
         
@@ -308,7 +332,7 @@
         
                         chart.draw(data, options);
                     }
-                </script>
+        </script>
         
         
         <script type="text/javascript">
@@ -321,13 +345,13 @@
                     var data = google.visualization.arrayToDataTable([
                         ['Период', 'Фактические значения', 'l3', 'l7', 'l5'],
                         
-                        @foreach (var d in ViewBag.MovingAveragesForTotalTrainingCampsCount as IEnumerable<MovingAveragesViewModel>)
+                        @foreach (var d in (ViewBag.MovingAveragesForTotalTrainingCampsCount as IEnumerable<MovingAveragesViewModel>)!)
                         {
                             <text>[@(d.Id.ToString("0.00", CultureInfo.InvariantCulture)),
-                             @(d.Value.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthThree is null) ? "undefined" : (d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthSeven is null) ? "undefined" : (d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthFive is null) ? "undefined" : (d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
+                                 @(d.Value?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
                         }       
                     ]);
 
@@ -356,13 +380,13 @@
                     var data = google.visualization.arrayToDataTable([
                         ['Период', 'Фактические значения', 'l3', 'l7', 'l5'],
                         
-                        @foreach (var d in ViewBag.MovingAveragesForTotalDayMailingCount as IEnumerable<MovingAveragesViewModel>)
+                        @foreach (var d in (ViewBag.MovingAveragesForTotalDayMailingCount as IEnumerable<MovingAveragesViewModel>)!)
                         {
                             <text>[@(d.Id.ToString("0.00", CultureInfo.InvariantCulture)),
-                             @(d.Value.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthThree is null) ? "undefined" : (d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthSeven is null) ? "undefined" : (d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
-                              @((d.IntervalLengthFive is null) ? "undefined" : (d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
+                                 @(d.Value?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthThree)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthSeven)?.ToString("0.00", CultureInfo.InvariantCulture)),
+                                  @((d.IntervalLengthFive)?.ToString("0.00", CultureInfo.InvariantCulture))],</text>
                         } 
                     ]);
     
@@ -378,6 +402,7 @@
                     var chart = new google.visualization.LineChart(document.getElementById('chart6'));
     
                     chart.draw(data, options);
+                    
                 }
             </script>
 
