--- a/wwwroot/css/GraphicsStyle.css
+++ b/wwwroot/css/GraphicsStyle.css
@@ -148,13 +148,11 @@ body {
 td, th {
     border: 1px solid rgb(190,190,190);
     padding: 10px 20px;
+    text-align: center;
 }
 
 th {
     background-color: rgb(235,235,235);
-}
-
-td {
     text-align: center;
 }
 
