--- a/wwwroot/css/CustomStyles.css
+++ b/wwwroot/css/CustomStyles.css
@@ -2,7 +2,6 @@ body {
     background: #d4d4d4
 }
 
-
 .inner_div {
     width: auto;
     height: auto;
@@ -16,7 +15,6 @@ body {
 .custom_text {
     width: 100%;
     height: 150px;
-    font: Georgia;
     font-size: 18px;
     box-shadow: 0 5px 10px #ccc;
     border-radius: 12px;
@@ -25,25 +23,12 @@ body {
 }
 
 .card-title {
-    font: Georgia;
     font-size: 28px;
     text-align: center;
     width: auto;
     height: auto;
 }
 
-.card {
-    transition: 0.2s linear;
-    width: auto;
-    height: auto;
-    border-radius: 15px;
-    text-align: center;
-    background-color: rgb(255, 255, 255, 0.7);
-    color: rgb(0, 0, 0);
-    margin: 10px -110px 10px -110px;
-    padding: 1px;
-    box-shadow: 0 5px 10px #000000;
-}
 
 .card:hover {
     transform: scale(1.05);
@@ -114,12 +99,10 @@ details {
     list-style: none;
 }
 
-
-/* Убираем стандартный маркер Chrome */
 details summary::-webkit-details-marker {
     display: none
 }
-/* Убираем стандартный маркер Firefox */
+
 details > summary {
     list-style: none;
 }
@@ -134,15 +117,11 @@ details[open] .modal {
 
 table {
     border-collapse: collapse;
-    border: 2px solid rgb(200,200,200);
+    border: 1px solid rgb(200,200,200);
     letter-spacing: 1px;
-    font-size: 0.8rem;
     margin-bottom: 50px;
-    font: Georgia;
-    font-size: 18px;
-}
-body {
-    padding: 2rem 5rem;
+    text-align: center;
+    font-size: 15px;
 }
 
 td, th {
@@ -169,7 +148,7 @@ caption {
 }
 
 .topics {
-    margin: 40px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     width: 240px;
     height: 45px;
     font-size: 18px;
@@ -179,4 +158,47 @@ caption {
     background: #eee;
     display: inline;
     cursor: pointer;
+}
+
+.ghost-button-rounded-corners {
+    display: inline-block;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    outline: none;
+    text-decoration: none;
+}
+
+.card {
+    transition: 0.2s linear;
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+    text-align: center;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: rgb(0, 0, 0);
+    margin: 10px auto 15px auto;
+    padding: 1px;
+    box-shadow: 0 5px 10px #000000;
+}
+
+.content {
+    width: auto;
+    height: auto;
+    background: rgba(148, 148, 148, 0.32);
+    box-shadow: 0 5px 10px #616060;
+    border-radius: 10px;
+    margin: 150px 50px 0px 50px;
+    padding: 10px;
+}
+
+.text-input-new-topic {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    box-shadow: 0 5px 10px #ccc;
+    border-radius: 12px;
+    margin: 10px 0px 10px 0px;
+    resize: none;
 }
