--- a/Views/Main/Subscribe.cshtml
+++ b/Views/Main/Subscribe.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 
-<link rel="stylesheet" href="~/css/SupportStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 @using (Html.BeginForm("Subscribe", "Main", FormMethod.Post))
 {
