--- a/Views/Mailing/MailingTopic.cshtml
+++ b/Views/Mailing/MailingTopic.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 
-<link rel="stylesheet" href="~/css/SupportStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 @using (Html.BeginForm("Topic", "Mailing", FormMethod.Post))
 {
