--- a/Views/Support/Answer.cshtml
+++ b/Views/Support/Answer.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ArtBiathlon.DataEntity.Help
 
-<link rel="stylesheet" href="~/css/PersonalAccountStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <div class="first_inner_div">
     @using (Html.BeginForm("Answer", "Support", FormMethod.Post))
