--- a/Views/Support/Question.cshtml
+++ b/Views/Support/Question.cshtml
@@ -1,15 +1,15 @@
 ﻿@model List<HelpViewModel>
 
-<link rel="stylesheet" href="~/css/PersonalAccountStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <div class="out_div">
     <div class="div_for_trainings">
           <h3>Вопросы</h3>
-        @for (int i = 0; i < Model.Count; i++)
+        @for (var i = 0; i < Model.Count; i++)
         {
                 <div class="second_inner_div">
                     <form autocomplete="on" method="post" asp-controller="Support" asp-action="Question">
-                        <table class="custom_table">
+                        <table>
                             <thead>
                                 <tr name="UserFIO">
                                     <th colspan="3">@Model[i].UserFio</th>
