--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AuthorizationModel
 <head>
-    <link rel="stylesheet" href="~/css/CustomStyle.css" />
+    <link rel="stylesheet" href="~/css/AccountStyle.css" />
 </head>
 <body>
     <div class="custom_div">
