--- a/Views/Chart/TrainingPie.cshtml
+++ b/Views/Chart/TrainingPie.cshtml
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="~/css/GraphicsStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
 <div class="card">
