--- a/Views/Pdf/HRVIndicatorsResults.cshtml
+++ b/Views/Pdf/HRVIndicatorsResults.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/PdfStyle.css" />
+﻿<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
     <div class="card">
