--- a/Views/Pdf/TrainingsList.cshtml
+++ b/Views/Pdf/TrainingsList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ArtBiathlon.DataEntity.TrainingType
 
-<link rel="stylesheet" href="~/css/PdfStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
     @using (Html.BeginForm("TrainingsList", "Pdf", FormMethod.Post))
