--- a/Views/Chart/ScheduleOfTotalTrainingTimeForTrainingCamps.cshtml
+++ b/Views/Chart/ScheduleOfTotalTrainingTimeForTrainingCamps.cshtml
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="~/css/GraphicsStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
     <div class="card">
@@ -63,7 +63,8 @@
             title: 'График общего время тренировочного процесса по лагерям',
             curveType: 'function',
             legend: { position: 'bottom' }, 
-            height: 500
+            height: 500,
+           
           };
 
             // Instantiate and draw our chart, passing in some options.
