--- a/Views/Chart/TrainingHistogram.cshtml
+++ b/Views/Chart/TrainingHistogram.cshtml
@@ -1,19 +1,19 @@
 @model ArtBiathlon.DataEntity.TrainingType
 
-<link rel="stylesheet" href="~/css/GraphicsStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
 
 @using (Html.BeginForm("TrainingHistogram", "Chart", FormMethod.Post))
 {
-    <div class="content">
+   
         <div class="card">
             <h3>Количество тренировок по каждому типу по выбранном виду</h3>
         </div>
 
         @Html.DropDownListFor(x => x.Id, ViewBag.TrainingTypes as SelectList, new {@class = "topics"})
         <input class="custom_button" type="submit" value="Выбрать" />
-    </div>
+   
 }
 
 <table>
@@ -77,7 +77,8 @@
                     hAxis: {title: 'Тип тренировки'},
                     seriesType: 'bars',
                     series: {5: {type: 'line'}},
-                    height: 500
+                    height: 500,
+               
                   };
 
             // Instantiate and draw our chart, passing in some options.
