--- a/Views/Pdf/TotalTrainingTypesTime.cshtml
+++ b/Views/Pdf/TotalTrainingTypesTime.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ArtBiathlon.DataEntity;
 @model TimeInterval;
 
-<link rel="stylesheet" href="~/css/PdfStyle.css" />
+<link rel="stylesheet" href="~/css/CustomStyles.css" />
 
 <body>
     <div class="card">
